# C-Menu

./: .gitattributes  .gitignore  API.html  API.md  C-Menu-0.2.9-Linux-x86_64.tar.xz  C-Menu-API.html  C-Menu-Decomp.md  C-Menu-Performance.md  C-Menu-UG.html  C-Menu-UG.md  CHANGELOG.md  CMENU.html  CMENU.md  CMenu.html  CMenu.md  FAQ.html  FAQ.md  INSTALL.html  INSTALL.md  LICENSE  LICENSE.md  LICENSE.txt  Makefile  Performance.md  README.html  README.md  Utilities.md  bwstyle.css  exercises.md  extras.html  extras.md  index.html  lf.md  main.m  menu-decomp.md  rustlings  snippets.html  snippets.md  xx  xxx
.github/: copilot-instructions.md
configs/: musthave
configs/nvim/: README.md  init.lua
configs/terminal_emulators/: alacritty.toml  musthave
configs/tree-sitter/: INSTALL.sh
doc/: CHANGES.md  CMAKE_BUILD.md  CMenu-Guide.html  CMenu-Guide.md  FAQ.html  FAQ.md  MAKE_BUILD.md  ansi_sgr.txt  extras.html  extras.md  fields-devel.md  quick_root.sh  regex.txt  roadmap-devel.md  sample.bashrc  view-devel.md
docs/: API.md  Augmentation_Guide.md  BUILD.md  Bill.md  C-Menu-Addendum.md  C-Menu-UG.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAQ.md  INSTALL.md  OVERVIEW.md  Performance.md  README.md  ROADMAP.md  cmenu.md  cmenu_manpage.md  exercises.md  extras.md  form.md  gnudatetime.md  lf.md  main.md  man_template.md  menu.md  pick.md  rsh.md  snippets.md  themes.md  valgrind.md  view.md
example_configs/: .gdbinit  alacritty.toml  ghostty.config  kitty.conf
example_configs/Desktop/: README.txt  cmenu.desktop  cmenu_Alacritty.desktop  cmenu_ghostty.desktop  cmenu_kitty.desktop  install_desktop.sh
menuapp/: .about  .minitrc  .minitrc-bw  .minitrc-theme  bashrc-cmenu  clean.sh  minitrc  minitrc.dmp
menuapp/config/: .minitrc  Gray  Green  GreenDark  Light  Pink  Red  Wild
menuapp/data/: contact.sh  dwin.c.hi  fields.ans  fields.f  form-out  iloan.out  init_view.c  minitrc.dmp  picklist
menuapp/doc/: applications.hlp  bashrc-advanced
menuapp/help/: bsp.help  code.help  fields.help  fields.hlp  fields.md  fields_help  form.help  form1.help  form3.help  iloan.help  iloan_help  lf.debug  lf.help  lf_debug  lf_help  main.help  main.m.help  menu.help  pick.help  pick.md  system.help  view.help  view_engine.c
menuapp/lib64/: libcm.so.0  libcm.so.0.2.9
menuapp/man/: io_uring.1  mmap.1  pthread_create.1  (+2 more)
nvim/: custom_highlights.lua  init.lua  init.lua.md
rsh/: cmenu_bashrc.sh
src/: .clang-tidy  .clangd  .gdb_history  CMakeLists.txt  CamakeLists.bak  GNUMakefile  GNU_Makefile  LICENSE.txt  Makefile  README.md  amort  amort.c  ansi.c  bash.sh  chkfile.c  ckeys.c  cm.h  cm_fields.c  color.c  colors.c  common.h  compile_commands.json  cpick.c  curskeys.c  defgroup  detach  detach.c  dgraph.c  display_curses_keys.c  dwin-new.c  dwin.c  end_pgm.h  enterchr.c  enterstr.c  exec.c  fckeys.c  fform.c  fields.c  file.c  fmenu.c  (+86 more)
src/.cache/clangd/index/: ckeys.c.5565CC8B9054B499.idx  ckeys.c.5D3BA1DC9DF62A87.idx  ckeys.c.7BF9492E55ACAF87.idx  cpick.c.4C59310F5AB915E6.idx  curskeys.c.B5024DFB69D09C2C.idx  curskeys.c.DFCD5BF9D8A534BA.idx  dgraph.c.D7E8AC7A9BBFBD47.idx  display_curses_keys.c.C690555FCCB94601.idx  dwin.c.1AE1CFC79DC1EB8D.idx  dwin.c.575266DBACB5E1F4.idx  dwin.c.BA759A67EDC86293.idx  engine.c.E22BA92CCE48D4A2.idx  enterchr.c.0B4B0AF56F032EEA.idx  enterchr.c.0E6996AA0102F5F8.idx  enterchr.c.C64A50899C60B3BA.idx  enterstr.c.96F2B04E654D0C1E.idx  enterstr.c.A1784ACE6EF5E071.idx  enterstr.c.DBC3632C6BF452C9.idx  exec.c.026C0CCF1CD172AC.idx  exec.c.A1FBE2F262C25E3F.idx  exec.c.C754C676A3C610EA.idx  fckeys.c.62D82B4E948747A6.idx  fform.c.11E8E6393DA2712D.idx  fform.c.42EB25B7C9E4D3FD.idx  fform.c.AA8571FF7F04404E.idx  fields.c.A0CB7D86A94366FB.idx  fields.c.BCFA56E83BC2C337.idx  fields.c.C82F6F099C57C5B1.idx  form.c.881F954F58E9C9B5.idx  form.c.DAE4149670B33EEA.idx  form.c.E03A0633FCE9A3CC.idx  fpaint.c.8E2154FA1819E3E9.idx  futil.c.3B2F5D24FB607AAE.idx  futil.c.9380ADD13098EB3C.idx  futil.c.ABEC55A4FD0EBC51.idx  fview.c.72FBD9E0A62C05FC.idx  iloan.c.331524F59701A253.idx  iloan.c.36C8CE8213BE6F83.idx  iloan.c.52A94D362E456C31.idx  init.c.36FDD5606C4E806F.idx  (+59 more)
src/.github/: copilot-instructions.md
src/config/: Green  Midnight  Red
src/doc/: BUILD.md  CMENU.html  CMENU.md  LICENSE.txt  README.md  args.txt  bashrc.html  bashrc.md  configs.html  configs.md  fields-devel.md  init.txt  options.txt  options2.txt  opts.html  opts.md  regex.txt  sample.m  termio.man  termios.txt
src/doc/examples/: bashrc
src/doc/terminal/: alacritty.toml  ghostty.config  kitty.conf
src/include/: cm.h  common.h  form.h  menu.h  pick.h  safe_strerror.h  ui_backend.h  version.h  version.h.in  view.h
src/misc/: killbyname  to_upper.c
src/notcurses/: Makefile  box.c  box2.c  ckeys.c  colors.c  curskeys.c  dwin.c  dxwgetch.c  example.c  floodfill.c  fmt_line.c  highlight.c  init_view.c  input_loop.c  inspect_cell.c  multimedia.c  nc.h  not_input.c  parse_menu_desc.c  redraw.c  render.c  render_menu.c  resize.c  ui_draw_with_channels.c  ui_mvaddcell.c  wattron.c
src/scratch/: ansi  ansi.c  ansi.txt  colorseq.c  gdbcmds  setcchar.c  wide.c  widestr.c
src/snippets/: sample_menu.m  strings_test1.c  stripansi.c
src/test/: .gdbinit  256color.c  2b  2b.c  ISO6801.c  Makefile_bak  Makefile_new  Makefile_old  ansi.c  box  c  callback.c  chktty  cmenu-ld.so.conf  color  color.c  colors.c  colors.sh  colors.txt  curses_colors.txt  daemon  daemon.c  decode_utf.c  dgraph.c  dt  dt.c  encode_utf.c  f  file.c  files  files-bak.c  files.c  fstat.c  gdbcmds  hex  iso6801.c  iso6801.sh  iso8601.c  local.c  locate.c  (+43 more)
src/ui/: ui_colors.c  ui_layout.h  ui_ncurses.c  ui_ncurses_draw.c  ui_ncurses_input.c  ui_ncurses_internal.h  ui_theme.h
src/work/: Makefile  contact.txt  dt.c  encode_utf.c  fhex2dec.c  fields.f  findtest1  form.help  hex2dec.c  main.m  menu.help  paintexec.help  paintwrite.help  panels.c  payment.f  picklist  pipe.c  ptrace_scope  ptrace_scope.sh  receipt.f  rfc3339.c  sample.m  view.help  view_stack.c  width.c  winners.help
tree-sitter/: README.txt  config.json
(+64 files in other folders)
